--- a/templates/chat.html
+++ b/templates/chat.html
@@ -98,5 +98,6 @@
     <script src="static/js/WebSocketHandler.js"></script>
     <script src="static/js/SecureSessionManager.js"></script>
     <script src="static/js/ChatInterface.js"></script>
+    <script src="/ws-config.js"></script>
 </body>
 </html>
